// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/MenuButtons <Publish> matches the snapshot for an error 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the closed state 1`] = `
<div>
  <div
    class="buttonWithPanel menuButtonsMetaInfoButton"
  >
    <div
      class="buttonWithPanelButtonWrapper"
    >
      <input
        class="buttonWithPanelButton menuButtonsMetaInfoButtonButton"
        type="button"
        value="Firefox (48.0) Intel Mac OS X 10.11"
      />
    </div>
    <div
      class="arrowPanelAnchor"
    >
      <div
        class="arrowPanel arrowPanelOpenMetaInfo"
      >
        <div
          class="arrowPanelArrow"
        />
      </div>
    </div>
  </div>
  <div
    class="menuButtons"
  >
    <div
      class="buttonWithPanel menuButtonsShareButton"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton menuButtonsShareButtonButton"
          type="button"
          value="Publish…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel menuButtonsPublishPanel"
        >
          <div
            class="arrowPanelArrow"
          />
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs…
    </a>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the completed upload panel 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a nightly profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <p
      class="menuButtonsPublishInfoDescription"
    >
      You’re about to share your profile potentially where others have public access to it. 
      In Nightly and custom builds, no information is stripped by default.
    </p>
    <details
      class="menuButtonsPublishData"
      open=""
    >
      <summary
        class="menuButtonsPublishDataSummary"
      >
        Adjust how much is shared
         
      </summary>
      <label
        class="photon-label"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="isFiltering"
          type="checkbox"
        />
        Filter out potentially identifying information
      </label>
      <div
        class="menuButtonsPublishDataChoices"
      >
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="hiddenThreads"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove hidden threads
            <div
              class="menuButtonsPublishLabelSubtext"
              title="No threads are removed."
            >
              No threads are removed.
            </div>
          </div>
           
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="timeRange"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove information out of the time range
          </div>
           
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="screenshots"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove screenshots
          </div>
           
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="urls"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove all URLs
          </div>
           
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="extension"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove extensions
          </div>
           
        </label>
      </div>
    </details>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a release profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <p
      class="menuButtonsPublishInfoDescription"
    >
      You’re about to share your profile potentially where others have public access to it. 
      By default, the profile is stripped of much of the personally identifiable information.
    </p>
    <details
      class="menuButtonsPublishData"
      open=""
    >
      <summary
        class="menuButtonsPublishDataSummary"
      >
        Adjust how much is shared
         
      </summary>
      <label
        class="photon-label"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="isFiltering"
          type="checkbox"
        />
        Filter out potentially identifying information
      </label>
      <div
        class="menuButtonsPublishDataChoices"
      >
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="hiddenThreads"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove hidden threads
            <div
              class="menuButtonsPublishLabelSubtext"
              title="No threads are removed."
            >
              No threads are removed.
            </div>
          </div>
           
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="timeRange"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove information out of the time range
          </div>
           
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="screenshots"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove screenshots
          </div>
           
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="urls"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove all URLs
          </div>
           
        </label>
        <label
          class="photon-label menuButtonsPublishDataChoicesLabel disabled"
        >
          <input
            checked=""
            class="photon-checkbox photon-checkbox-default"
            disabled=""
            name="extension"
            type="checkbox"
          />
          <div
            class="menuButtonsPublishLabelContent"
          >
            Remove extensions
          </div>
           
        </label>
      </div>
    </details>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the uploading panel 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="menuButtonsPublishUploadTop"
  >
    <div
      class="menuButtonsPublishUploadTitle"
    >
      Publishing profile…
    </div>
    <div
      class="menuButtonsPublishUploadPercentage"
    >
      0%
    </div>
    <div
      class="menuButtonsPublishUploadBar"
    >
      <div
        class="menuButtonsPublishUploadBarInner"
        style="width: 0%;"
      />
    </div>
  </div>
  <div
    class="menuButtonsPublishButtons"
  >
    <button
      class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
      type="button"
    >
      Compressing…
    </button>
    <button
      class="photon-button photon-button-default menuButtonsPublishButton menuButtonsPublishButtonsCancelUpload"
      type="button"
    >
      Cancel Upload
    </button>
  </div>
</div>
`;
